--- a/Website 11/index.html
+++ b/Website 11/index.html
@@ -24,15 +24,15 @@
 
             <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Pesquisar</button></a>
+                <a href="#"> <button class="btn">Search</button></a>
             </div>
 
         </div> 
         <div class="content">
             <h1>Quality <span>Brazilian</span> Food</h1><br>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
-                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
-                <br> a quae totam ipsa illum minus laudantium?</p>
+            <p class="par">Here you will taste special foods made by our best chefs using Brazilian <br>
+                spices and a lot of effort! We value the quality 
+                and comfort of the customer, <br> do not waste time and come and meet our restaurant!</p>
 
                 <button class="cn"><a href="#">VIEW MORE</a></button>
 
